forgejo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: forgejo
spec:
    replicas: 1
    selector:
        matchLabels:
            app: forgejo
    template:
        metadata:
            labels:
                app: forgejo
        spec:
            securityContext:
                fsGroup: 10222
            containers:
                - name: forgejo
                  image: codeberg.org/forgejo/forgejo:15-rootless
                  # readinessProbe:
                  #     httpGet:
                  #         path: /index.html # Or a simple health check endpoint
                  #         port: 3000
                  #     initialDelaySeconds: 10
                  #     periodSeconds: 5
                  resources:
                      requests:
                          cpu: "200m"
                          memory: "512Mi"
                      limits:
                          cpu: "1000m" # Allow bursting for heavy Git operations
                          memory: "1Gi"
                  ports:
                      - containerPort: 3000
                      - containerPort: 22222
                  securityContext:
                      runAsUser: 10222
                      runAsGroup: 10222
                  volumeMounts:
                      - name: forgejo-data
                        mountPath: /var/lib/gitea
            volumes:
                - name: forgejo-data
                  persistentVolumeClaim:
                      claimName: forgejo-data-pvc
