forgejo/http-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: forgejo-http-route
    namespace: default
spec:
    parentRefs:
        - name: forgejo-gateway
          sectionName: https
    hostnames:
        - "forgejo.mbusiness.mn"
    rules:
        - backendRefs:
              - name: forgejo # Your service name
                port: 3000
