forgejo/tcp-route.yml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
    name: forgejo-ssh-route
    namespace: default
spec:
    parentRefs:
        - name: forgejo-gateway
          sectionName: ssh
    rules:
        - backendRefs:
              - name: forgejo # Your service name
                port: 2222
